# lm_optimizer

./: PLAN.MD  PLAN_1.MD  PROJECT.MD  README.md  batch_feedback_eval.py  eval.md  fix_plan.md  main.py  pipeline.py  pyproject.toml
.claude/: settings.local.json
catalog/: __init__.py  catalog.py  doc_stats.py  indexer.py  model_stats.py  semantic_stats.py
compiler/: __init__.py  llm_compiler.py  models.py  prompts.py  rendering.py
cost_model/: cost_aware_planner.py  history.py  judge.py  profilers.py  scorer.py  telemetry.json  telemetry.py  vectors.py  weights.py
executor/: context.py  corpus.py  registry.py  runner.py
ir/: evidence.py  feedback.py  nodes.py  ops.py
logs/: round1_1601.02403_9.json  round1_1601.04012_3.json  round1_1804.08186_1.json  round1_1804.08186_2.json  round1_1810.02100_0.json  round1_1810.13414_4.json  round1_1811.00051_6.json  round1_1903.08237_5.json  round1_2003.04866_7.json  round1_2003.04866_8.json  round2_1601.02403_9.json  round2_1601.04012_3.json  round2_1804.08186_1.json  round2_1804.08186_2.json  round2_1810.02100_0.json  round2_1810.13414_4.json  round2_1811.00051_6.json  round2_1903.08237_5.json  round2_2003.04866_7.json  round2_2003.04866_8.json
logs_scifact/: round10_node_feedbacks.json  round10_shared_plan.json  round1_node_feedbacks.json  round1_shared_plan.json  round2_node_feedbacks.json  round2_shared_plan.json  round3_node_feedbacks.json  round3_shared_plan.json  round4_node_feedbacks.json  round4_shared_plan.json  round5_node_feedbacks.json  round5_shared_plan.json  round6_node_feedbacks.json  (+7 more)
parser/: prompts.py  (+4 more)
(+40 files in other folders)
